fix overflow problem

--- a/style/main.css
+++ b/style/main.css
@@ -57,6 +57,8 @@ img.themeIcon {
     -moz-border-radius: 100vh;
     -ms-border-radius: 100vh;
     -o-border-radius: 100vh;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 
     background-color: var(--backgroundColor);
 }
@@ -94,6 +96,8 @@ svg#burger {
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 
     background: var(--backgroundColor);
 }
