--- a/style/principeIncertitude.css
+++ b/style/principeIncertitude.css
@@ -72,7 +72,8 @@ canvas#atomAnimation:active {
   section#content > p#mainContent {
     position: relative;
     width: 100%;
-    top: 15vh;
+    top: 20vh;
+    height: 100%;
   }
   p#title {
     left: 3vh;
@@ -96,7 +97,8 @@ canvas#atomAnimation:active {
   section#content > p#mainContent {
     position: relative;
     width: 100%;
-    top: 15vh;
+    top: 20vh;
+    height: 100%;
   }
   p#title {
     left: 3vh;
